BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Feedback_BMS__c.object
<CustomObject>
    <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom object to capture user feedback related to a variety of topics.</description>
    <fields>
        <fullName>Closed_Date_BMS__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture user feedback comments.</description>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Response_BMS__c</fullName>
        <label>Field Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Status_BMS__c</fullName>
        <label>Field Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ops_Work_log_BMS__c</fullName>
        <label>Ops Work log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestorEmailAddress_BMS__c</fullName>
        <label>Requestor Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ticket_Number_BMS__c</fullName>
        <inlineHelpText>Only use this field in cases where you have logged a ticket with the Help Desk (Support Escalation)</inlineHelpText>
        <label>Ticket Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the available topics for which a user can submit feedback.</description>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Escalation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>Enhancement_Ideas_Report</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Feedback_BMS__c</columns>
        <columns>Topic_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic_BMS__c</field>
            <operation>equals</operation>
            <value>Enhancement Idea</value>
        </filters>
        <label>Enhancement Ideas Report</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Enhancement_Ideas_Report1</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Feedback_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic_BMS__c</field>
            <operation>equals</operation>
            <value>Enhancement Idea</value>
        </filters>
        <label>Enhancement Ideas Report</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Enhancement_Ideas_Report2</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Feedback_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic_BMS__c</field>
            <operation>equals</operation>
            <value>Enhancement Idea</value>
        </filters>
        <label>Enhancement Ideas Report</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Feedback_Report</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Feedback_BMS__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Topic_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic_BMS__c</field>
            <operation>equals</operation>
            <value>Enhancement Idea</value>
        </filters>
        <label>Enhancement Ideas Report</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>